--- a/ProyectoFinalAp2/Pages/Reportes/ReporteFactura.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/ReporteFactura.razor
@@ -40,7 +40,7 @@
                             <td>@item.FacturaId</td>
                             <td>@GetNombre(item.ClienteId)</td>
                             <td>@item.Fecha.ToString("dd/MM/yyyy")</td>
-                            <td>@item.Total</td>
+                            <td>@item.Total.ToString("N2")</td>
                         </tr>
                     }
                 </tbody>
@@ -49,8 +49,8 @@
 
         <div class="card-footer">
             <div class="form-group">
-                <label>Total de Clientes</label>
-                <input @bind="@total" class="form-control" readonly />
+                <label>Suma de los totales:</label>
+                <input @bind="@auxTotal2" class="form-control" readonly />
             </div>
         </div>
         <button class="btn btn-primary" @onclick="@ExportToPdf">Exportar a PDF</button>
@@ -63,6 +63,7 @@
     private String Fecha;
     private int cantidad;
     private decimal total = 0;
+    private string auxTotal2 = string.Empty;
     List<AuxFactura> auxLista;
     AuxFactura aux = new AuxFactura();
 
@@ -86,11 +87,13 @@
 
         total = auxTotal;
         cantidad = auxCantidad;
+        auxTotal2 = total.ToString("N2");
+        
     }
 
     protected async Task ExportToPdf()
     {
-        using (MemoryStream excelStream = ExportService.CreatePdfFacturas(auxLista, DateTime.Now.ToString("dd/MM/yyyy"), total.ToString(),cantidad.ToString()))
+        using (MemoryStream excelStream = ExportService.CreatePdfFacturas(auxLista, DateTime.Now.ToString("dd/MM/yyyy"), total.ToString("N2"),cantidad.ToString()))
         {
             await JS.SaveAs("Facturas.pdf", excelStream.ToArray());
         }
