--- a/ProyectoFinalAp2/Pages/Consultas/C_Facturas.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_Facturas.razor
@@ -82,7 +82,7 @@
                         <td>@item.FacturaId</td>
                         <td>@GetNombre(item.ClienteId)</td>
                         <td>@item.Fecha.ToString("dd/MM/yyyy")</td>
-                        <td>@item.Total</td>
+                        <td>@item.Total.ToString("N2")</td>
                         <td><a class="btn btn-outline-info" href="Facturas/@item.FacturaId">Ver</a></td>
                     </tr>
                 }
@@ -90,7 +90,7 @@
         </table>
         <div class="form-group">
             <label>Suma total</label>
-            <input type="number" @bind="total" class="form-control" readonly />
+            <input  @bind="auxTotal2" class="form-control" readonly />
         </div>
 
         <div class="form-group">
@@ -130,7 +130,7 @@
     public int filtro;
     public string criterio = string.Empty;
     public decimal total = 0;
-    private string auxTotal = string.Empty;
+    private string auxTotal2 = string.Empty;
     private int cantidad = 0;
     public List<AuxFactura> auxLista;
     public List<Facturas> auxfacturaLista = new List<Facturas>();
@@ -300,7 +300,7 @@
     protected async Task ExportToPdf()
     {
         CargarListaAux();
-        using (MemoryStream excelStream = ExportService.CreatePdfFacturas(auxLista, DateTime.Now.ToString("dd/MM/yyyy"), total.ToString(),cantidad.ToString()))
+        using (MemoryStream excelStream = ExportService.CreatePdfFacturas(auxLista, DateTime.Now.ToString("dd/MM/yyyy"), total.ToString("N2"),cantidad.ToString()))
         {
             await JS.SaveAs("Facturas.pdf", excelStream.ToArray());
         }
@@ -431,6 +431,7 @@
 
         total = auxTotal;
         cantidad = auxCantidad;
+        auxTotal2 = total.ToString("N2");
     }
 
 
