--- a/ProyectoFinalAp2/Pages/Registros/R_EntradaProductos.razor
+++ b/ProyectoFinalAp2/Pages/Registros/R_EntradaProductos.razor
@@ -184,13 +184,20 @@
 
     private async Task Guardar()
     {
+        bool guardado = false;
         if (entradaProductos.DetalleEntrada.Count() == 0)
         {
             await JS.Confirmar("top-center", "info", "Información", "Debe agregar al menos un producto", false, 2000);
             return;
         }
 
-        bool guardado = EntradaProductoBLL.Guardar(entradaProductos);
+        if(entradaProductos.EntradaProductoId == 0)
+            guardado = EntradaProductoBLL.Guardar(entradaProductos);
+        else
+        {
+            if (EntradaProductoBLL.ExisteParaModificar(entradaProductos.EntradaProductoId))
+                guardado = EntradaProductoBLL.Guardar(entradaProductos);
+        }
 
         if (guardado)
         {
