--- a/ProyectoFinalAp2/Pages/Registros/R_Factura.razor
+++ b/ProyectoFinalAp2/Pages/Registros/R_Factura.razor
@@ -124,7 +124,7 @@
                 <button type="button" class="btn btn-secondary" @onclick="Nuevo"><span class="icon-add"></span> Nuevo </button>
                 <button type="submit" class="btn btn-success"><span class="icon-save"></span> Guardar </button>
                 <button type="button" class="btn btn-danger" @onclick="Eliminar"><span class="icon-delete_forever"></span> Eliminar </button>
-                <button type="button" class="btn btn-warning" @onclick="ExportToPdf"><span class="icon-print_disabled"></span>Exportar a PDF</button>
+                <button type="button" class="btn btn-warning" @onclick="ExportToPdf"><span class="icon-pages"></span>Exportar a PDF</button>
             </div>
         </div>
 
@@ -395,7 +395,7 @@
         CargarAuxLista();
         if(this.facturas.Detalles.Count() == 0)
         {
-            await JS.Confirmar("top-center", "info", "Aviso", "No hay nada para imprimir", false, 2000);
+            await JS.Confirmar("top-center", "info", "Aviso", "No hay nada para exportar.", false, 2000);
         }
         else
         {
