--- a/ProyectoFinalAp2/Pages/Consultas/C_EntradaProductos.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_EntradaProductos.razor
@@ -224,43 +224,35 @@
         {
             if (Filtro == 0)
             {
-                Filtro = 1;
+                lista = EntradaProductoBLL.GetList(e => true);
+                Paginar(e => true);
+                auxEntradaLista = lista;
+                CargarParaExportar();
             }
             else
             {
-                lista = EntradaProductoBLL.GetList(a => true);
-
+                switch (Filtro)
+                {
+                    case 1:
+                        lista = EntradaProductoBLL.GetList(e => true);
+                        Paginar(e => true);
+                        break;
+                    case 2:
+                        int id = await GetId();
+                        lista = EntradaProductoBLL.GetList(e => e.EntradaProductoId == id);
+                        Paginar(e => e.EntradaProductoId == id);
+                        break;
+                }
+                if (BuscarFecha == true)
+                {
+                    lista = lista.Where(p => p.Fecha.Date >= DesdeFecha.Date && p.Fecha.Date <= HastaFecha.Date).ToList();
+                }
                 if (lista.Count == 0)
                 {
                     await JS.Confirmar("top-center", "info", "Aviso", "No hay nada registrado", false, 2000);
                 }
-                else
-                {
-                    switch (Filtro)
-                    {
-                        case 1:
-                            lista = EntradaProductoBLL.GetList(e => true);
-                            Paginar(e => true);
-                            break;
-                        case 2:
-                            int id = await GetId();
-                            lista = EntradaProductoBLL.GetList(e => e.UsuarioId == id);
-                            Paginar(e => e.UsuarioId == id);
-                            break;
-                    }
-                    if (BuscarFecha == true)
-                    {
-                        lista = lista.Where(p => p.Fecha.Date >= DesdeFecha.Date && p.Fecha.Date <= HastaFecha.Date).ToList();
-                    }
-
-                    if (lista.Count == 0)
-                    {
-                        await JS.Confirmar("top-center", "error", "Error", "No se ha encontrado nada con este criterio", false, 2000);
-                    }
-
-                    auxEntradaLista = lista;
-                    CargarParaExportar();
-                }
+                auxEntradaLista = lista;
+                CargarParaExportar();
             }
         }
         catch (Exception)
