--- a/ProyectoFinalAp2/Pages/Consultas/C_Marca.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_Marca.razor
@@ -210,10 +210,18 @@
 
     protected async Task ExportToPdf()
     {
-        using (MemoryStream excelStream = ExportService.CreatePdfMarcas(auxMarcasLista, DateTime.Now.ToString(), cantidadDeMarcas.ToString()))
+        if(auxMarcasLista.Count() == 0 || auxMarcasLista == null)
         {
-            await JS.SaveAs("Marcas.pdf", excelStream.ToArray());
+            await JS.Confirmar("top-center", "info", "Aviso", "No hay nada para exportar.", false, 2000);
         }
+        else
+        {
+            using (MemoryStream excelStream = ExportService.CreatePdfMarcas(auxMarcasLista, DateTime.Now.ToString(), cantidadDeMarcas.ToString()))
+            {
+                await JS.SaveAs("Marcas.pdf", excelStream.ToArray());
+            }
+        }
+
     }
 
 
