--- a/ProyectoFinalAp2/Pages/Consultas/C_Usuarios.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_Usuarios.razor
@@ -138,6 +138,7 @@
     protected override void OnInitialized()
     {
         lista = new List<Usuarios>();
+        auxLista = new List<AuxUsuario>();
         DesdeFecha = DateTime.Now;
         HastaFecha = DateTime.Now;
     }
@@ -210,16 +211,16 @@
         {
             this.lista = UsuariosBLL.GetList(p => p.NombreUsuario == Criterio).Skip(contador * pagina.mostrarCantidad).Take(pagina.mostrarCantidad).ToList();
         }
-        if (BuscarFecha)
-        {
-            if (Filtro == 1 || Filtro == 0)
-            {
-                this.lista = UsuariosBLL.GetList(p => true);
-                lista = lista.Where(f => f.FechaIngreso.Date >= DesdeFecha.Date && f.FechaIngreso.Date <= HastaFecha.Date).ToList();
-            }
-            else
-                lista = lista.Where(f => f.FechaIngreso.Date >= DesdeFecha.Date && f.FechaIngreso.Date <= HastaFecha.Date).ToList();
-        }
+        //if (BuscarFecha)
+        //{
+        //    if (Filtro == 1 || Filtro == 0)
+        //    {
+        //        this.lista = UsuariosBLL.GetList(p => true);
+        //        lista = lista.Where(f => f.FechaIngreso.Date >= DesdeFecha.Date && f.FechaIngreso.Date <= HastaFecha.Date).ToList();
+        //    }
+        //    else
+        //        lista = lista.Where(f => f.FechaIngreso.Date >= DesdeFecha.Date && f.FechaIngreso.Date <= HastaFecha.Date).ToList();
+        //}
     }
 
     private void Paginar(Expression<Func<Usuarios, bool>> expression)
@@ -231,10 +232,19 @@
 
     protected async Task ExportToPdf()
     {
-        using (MemoryStream excelStream = ExportService.CreatePdfUsuarios(auxLista, DateTime.Now.ToString("dd/MM/yyyy"), Cantidad))
+        CargarListaAux();
+        if(auxLista.Count()==0 || auxLista == null)
         {
-            await JS.SaveAs("Usuarios.pdf", excelStream.ToArray());
+            await JS.Confirmar("top-center", "info", "Aviso", "No hay nada para exportar.", false, 2000);
         }
+        else
+        {
+            using (MemoryStream excelStream = ExportService.CreatePdfUsuarios(auxLista, DateTime.Now.ToString("dd/MM/yyyy"), Cantidad))
+            {
+                await JS.SaveAs("Usuarios.pdf", excelStream.ToArray());
+            }
+        }
+
     }
 
     private async Task Buscar()
@@ -243,52 +253,47 @@
         {
             if (Filtro == 0)
             {
-                Filtro = 1;
+                lista = UsuariosBLL.GetList(e => true);
+                Paginar(p => true);
+                auxUsuariosLista = lista;
+                CargarListaAux();
             }
             else
             {
-                lista = UsuariosBLL.GetList(a => true);
-
-                if (lista.Count == 0)
+                switch (Filtro)
                 {
-                    await JS.Confirmar("top-center", "info", "Aviso", "No hay usuarios registrados", false, 2000);
+                    case 1:
+                        lista = UsuariosBLL.GetList(e => true);
+                        Paginar(p => true);
+                        break;
+                    case 2:
+                        int id = await GetId();
+                        lista = UsuariosBLL.GetList(e => e.UsuarioId == id);
+                        Paginar(e => e.UsuarioId == id);
+                        break;
+                    case 3:
+                        lista = UsuariosBLL.GetList(e => e.Nombres == Criterio);
+                        Paginar(e => e.Nombres == Criterio);
+                        break;
+                    case 4:
+                        lista = UsuariosBLL.GetList(e => e.NombreUsuario == Criterio);
+                        Paginar(e => e.NombreUsuario == Criterio);
+                        break;
                 }
-                else
+
+                if (BuscarFecha == true)
                 {
-                    switch (Filtro)
-                    {
-                        case 1:
-                            lista = UsuariosBLL.GetList(e => true);
-                            Paginar(p => true);
-                            break;
-                        case 2:
-                            int id = await GetId();
-                            lista = UsuariosBLL.GetList(e => e.UsuarioId == id);
-                            Paginar(e => e.UsuarioId == id);
-                            break;
-                        case 3:
-                            lista = UsuariosBLL.GetList(e => e.Nombres == Criterio);
-                            Paginar(e => e.Nombres == Criterio);
-                            break;
-                        case 4:
-                            lista = UsuariosBLL.GetList(e => e.NombreUsuario == Criterio);
-                            Paginar(e => e.NombreUsuario == Criterio);
-                            break;
-                    }
+                    lista = lista.Where(p => p.FechaIngreso.Date >= DesdeFecha.Date && p.FechaIngreso.Date <= HastaFecha.Date).ToList();
+                    Paginar(f => f.FechaIngreso.Date >= DesdeFecha.Date && f.FechaIngreso.Date <= HastaFecha.Date);
+                }
 
+                if (lista.Count() == 0)
+                {
+                    await JS.Confirmar("top-center", "error", "Error", "No se han encontrado usuarios con este criterio", false, 2000);
+                }
 
-
-                    if (BuscarFecha == true)
-                    {
-                        lista = lista.Where(p => p.FechaIngreso.Date >= DesdeFecha.Date && p.FechaIngreso.Date <= HastaFecha.Date).ToList();
-                        Paginar(f => f.FechaIngreso.Date >= DesdeFecha.Date && f.FechaIngreso.Date <= HastaFecha.Date);
-                    }
-
-                    if (lista.Count == 0)
-                    {
-                        await JS.Confirmar("top-center", "error", "Error", "No se han encontrado usuarios con este criterio", false, 2000);
-                    }
-
+                if (lista.Count() != 0)
+                {
                     auxUsuariosLista = lista;
                     CargarListaAux();
                 }
