--- a/ProyectoFinalAp2/Pages/Reportes/R_Marcas.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/R_Marcas.razor
@@ -73,9 +73,17 @@
 
     protected async Task ExportToPdf()
     {
-        using (MemoryStream excelStream = ExportService.CreatePdfMarcas(lista, Fecha, total.ToString()))
+        if(lista.Count() == 0 || lista == null)
         {
-            await JS.SaveAs("Marcas.pdf", excelStream.ToArray());
+            await JS.Confirmar("top-center", "info", "Aviso", "No hay anda para exportar.", false, 2000);
         }
+        else
+        {
+            using (MemoryStream excelStream = ExportService.CreatePdfMarcas(lista, Fecha, total.ToString()))
+            {
+                await JS.SaveAs("Marcas.pdf", excelStream.ToArray());
+            }
+        }
+
     }
 }
