--- a/ProyectoFinalAp2/Pages/Reportes/ReporteCategorias.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/ReporteCategorias.razor
@@ -72,9 +72,17 @@
 
     protected async Task ExportToPdf()
     {
-        using (MemoryStream excelStream = ExportService.CreatePdfCategorias(lista, Fecha, total.ToString()))
+        if (lista.Count() == 0 || lista == null)
         {
-            await JS.SaveAs("Categorias.pdf", excelStream.ToArray());
+            await JS.Confirmar("top-center", "info", "Aviso", "No hay anda para exportar.", false, 2000);
         }
+        else
+        {
+            using (MemoryStream excelStream = ExportService.CreatePdfCategorias(lista, Fecha, total.ToString()))
+            {
+                await JS.SaveAs("Categorias.pdf", excelStream.ToArray());
+            }
+        }
+
     }
 }
