--- a/ProyectoFinalAp2/Pages/Reportes/ReporteFactura.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/ReporteFactura.razor
@@ -86,15 +86,23 @@
 
         total = auxTotal;
         cantidad = auxCantidad;
-        
+
     }
 
     protected async Task ExportToPdf()
     {
-        using (MemoryStream excelStream = ExportService.CreatePdfFacturas(auxLista, DateTime.Now.ToString("dd/MM/yyyy"), total.ToString("N2"),cantidad.ToString()))
+        if(auxLista.Count()==0 || auxLista == null)
         {
-            await JS.SaveAs("Facturas.pdf", excelStream.ToArray());
+            await JS.Confirmar("top-center", "info", "Aviso", "No hay anda para exportar.", false, 2000);
         }
+        else
+        {
+            using (MemoryStream excelStream = ExportService.CreatePdfFacturas(auxLista, DateTime.Now.ToString("dd/MM/yyyy"), total.ToString("N2"), cantidad.ToString()))
+            {
+                await JS.SaveAs("Facturas.pdf", excelStream.ToArray());
+            }
+        }
+
     }
 
     private void CargarListaAux()
