--- a/ProyectoFinalAp2/Shared/Login.razor
+++ b/ProyectoFinalAp2/Shared/Login.razor
@@ -1,4 +1,5 @@
 ﻿@page  "/Login"
+@page "/Login/{numero:int}"
 @using ProyectoFinalAp2.Models
 @using ProyectoFinalAp2.Controllers
 @using ProyectoFinalAp2.Pages.Login
@@ -27,7 +28,6 @@
             background-size: cover;
             background-repeat: no-repeat;
             height: 100%;
-            font-family: 'Lucida Console', sans-serif;
         }
 
         .container {
@@ -137,23 +137,31 @@
 
 
 @code {
+    [Parameter]
+    public int numero { get; set; }
+
     string Username;
     string Password;
-    public static int num = 0;
+    int num;
+
+    protected override void OnParametersSet()
+    {
+        num = numero;
+    }
 
     protected override void OnInitialized()
     {
-        num += 1;
-
-        if(num > 1)
+        if (num == 1)
         {
             var r = Mostrar();
+            num = 0;
         }
     }
 
     public async Task Mostrar()
     {
         await jsRunTime.Confirmar("top-center", "error", "Intentelo de nuevo", "Usuario y/o contraseña incorrectos", false, 2000);
+        numero = 0;
     }
 
     private string encode(string param)
